# serenum

./: Cargo.toml  README.md
src/: codegen.rs  lib.rs
tests/: test_strenum.rs
